--- a/3 - Intro to Tables/demo/lec03.ipynb
+++ b/3 - Intro to Tables/demo/lec03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Color</th> <th>Price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>3.55 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>light brown</td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>bubblegum </td> <td>pink       </td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Flavor     | Color       | Price\n",
+       "strawberry | pink        | 3.55\n",
+       "chocolate  | light brown | 4.75\n",
+       "chocolate  | dark brown  | 5.25\n",
+       "strawberry | pink        | 5.25\n",
+       "chocolate  | dark brown  | 5.25\n",
+       "bubblegum  | pink        | 4.75"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cones = Table.read_table('cones.csv')\n",
     "cones"
@@ -33,9 +79,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Color</th> <th>Price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>3.55 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>light brown</td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (3 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "cones.show(3)"
    ]
@@ -51,18 +128,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cones.select('Flavor')"
+    "flavor_table = cones.select('Flavor')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Color</th> <th>Price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>3.55 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>light brown</td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>bubblegum </td> <td>pink       </td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>bubblegum </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cones.show()\n",
+    "flavor_table.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>3.55 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>bubblegum </td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Flavor     | Price\n",
+       "strawberry | 3.55\n",
+       "chocolate  | 4.75\n",
+       "chocolate  | 5.25\n",
+       "strawberry | 5.25\n",
+       "chocolate  | 5.25\n",
+       "bubblegum  | 4.75"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cones.select('Flavor', 'Price')"
    ]
@@ -83,20 +293,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Color</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>light brown</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>bubblegum </td> <td>pink       </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Flavor     | Color\n",
+       "strawberry | pink\n",
+       "chocolate  | light brown\n",
+       "chocolate  | dark brown\n",
+       "strawberry | pink\n",
+       "chocolate  | dark brown\n",
+       "bubblegum  | pink"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cones.drop('Price')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Color</th> <th>Price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>3.55 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>light brown</td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>bubblegum </td> <td>pink       </td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "cones"
+    "cones.show()"
    ]
   },
   {
@@ -111,11 +406,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Color</th> <th>Price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>chocolate</td> <td>light brown</td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate</td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate</td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Flavor    | Color       | Price\n",
+       "chocolate | light brown | 4.75\n",
+       "chocolate | dark brown  | 5.25\n",
+       "chocolate | dark brown  | 5.25"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cones.where('Flavor', 'chocolate')"
    ]
@@ -131,20 +460,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Color</th> <th>Price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>light brown</td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>bubblegum </td> <td>pink       </td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>3.55 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Flavor     | Color       | Price\n",
+       "chocolate  | dark brown  | 5.25\n",
+       "strawberry | pink        | 5.25\n",
+       "chocolate  | dark brown  | 5.25\n",
+       "chocolate  | light brown | 4.75\n",
+       "bubblegum  | pink        | 4.75\n",
+       "strawberry | pink        | 3.55"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cones.sort('Price', descending=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Color</th> <th>Price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>3.55 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>light brown</td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>bubblegum </td> <td>pink       </td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Flavor     | Color       | Price\n",
+       "strawberry | pink        | 3.55\n",
+       "strawberry | pink        | 5.25\n",
+       "chocolate  | light brown | 4.75\n",
+       "chocolate  | dark brown  | 5.25\n",
+       "chocolate  | dark brown  | 5.25\n",
+       "bubblegum  | pink        | 4.75"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cones.sort('Flavor', descending=True)"
    ]
