--- a/3 - Intro to Tables/lab/lab02.ipynb
+++ b/3 - Intro to Tables/lab/lab02.ipynb
@@ -766,12 +766,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Table' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Just run this cell\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m imdb = \u001b[43mTable\u001b[49m.read_table(\u001b[33m'\u001b[39m\u001b[33mimdb.csv\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      4\u001b[39m imdb\n",
+      "\u001b[31mNameError\u001b[39m: name 'Table' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Just run this cell\n",
     "\n",
@@ -944,7 +956,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.1"
   },
   "otter": {
    "OK_FORMAT": true,
