added select example

--- a/3 - Intro to Tables/lab/lab02.ipynb
+++ b/3 - Intro to Tables/lab/lab02.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/codespace/.local/lib/python3.12/site-packages/nbformat/__init__.py:96: MissingIDFieldWarning: Cell is missing an id field, this will become a hard error in future nbformat versions. You may want to use `normalize()` on your notebooks before validations (available since nbformat 5.1.4). Previous versions of nbformat are fixing this issue transparently, and will stop doing so in the future.\n",
+      "  validate(nb)\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize Otter\n",
     "import otter\n",
@@ -30,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,12 +113,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_year = ...\n",
     "new_year"
@@ -117,12 +137,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong style='color: red;'><pre style='display: inline;'>q11</pre> results:</strong></p><p><strong><pre style='display: inline;'>q11 - 1</pre> result:</strong></p><pre>    ❌ Test case failed\n",
+       "    Trying:\n",
+       "        new_year\n",
+       "    Expecting:\n",
+       "        2024\n",
+       "    **********************************************************************\n",
+       "    Line 1, in q11 0\n",
+       "    Failed example:\n",
+       "        new_year\n",
+       "    Expected:\n",
+       "        2024\n",
+       "    Got:\n",
+       "        Ellipsis\n",
+       "</pre>"
+      ],
+      "text/plain": [
+       "q11 results:\n",
+       "    q11 - 1 result:\n",
+       "        ❌ Test case failed\n",
+       "        Trying:\n",
+       "            new_year\n",
+       "        Expecting:\n",
+       "            2024\n",
+       "        **********************************************************************\n",
+       "        Line 1, in q11 0\n",
+       "        Failed example:\n",
+       "            new_year\n",
+       "        Expected:\n",
+       "            2024\n",
+       "        Got:\n",
+       "            Ellipsis"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q11\")"
    ]
@@ -154,9 +215,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mmax\u001b[39m) \u001b[38;5;66;03m#  just shows us that this is currently a function\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[32;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m7\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m#  returns 7, as expected\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: 'int' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "print(max) #  just shows us that this is currently a function\n",
     "max(5, 6, 7) #  returns 7, as expected"
@@ -173,7 +253,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28mmax\u001b[39m = \u001b[32m8\u001b[39m \u001b[38;5;66;03m#  you should not do this!\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mmax\u001b[39m) \u001b[38;5;66;03m#  it now prints the number 8, since that was what was stored in it\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[32;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m7\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m#  it no longer works!\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: 'int' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "max = 8 #  you should not do this!\n",
     "print(max) #  it now prints the number 8, since that was what was stored in it\n",
@@ -766,22 +865,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Table' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Just run this cell\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m imdb = \u001b[43mTable\u001b[49m.read_table(\u001b[33m'\u001b[39m\u001b[33mimdb.csv\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      4\u001b[39m imdb\n",
-      "\u001b[31mNameError\u001b[39m: name 'Table' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Votes</th> <th>Rating</th> <th>Title</th> <th>Year</th> <th>Decade</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>88355 </td> <td>8.4   </td> <td>M                    </td> <td>1931</td> <td>1930  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>132823</td> <td>8.3   </td> <td>Singin' in the Rain  </td> <td>1952</td> <td>1950  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>74178 </td> <td>8.3   </td> <td>All About Eve        </td> <td>1950</td> <td>1950  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>635139</td> <td>8.6   </td> <td>Léon                 </td> <td>1994</td> <td>1990  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>145514</td> <td>8.2   </td> <td>The Elephant Man     </td> <td>1980</td> <td>1980  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>425461</td> <td>8.3   </td> <td>Full Metal Jacket    </td> <td>1987</td> <td>1980  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>441174</td> <td>8.1   </td> <td>Gone Girl            </td> <td>2014</td> <td>2010  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>850601</td> <td>8.3   </td> <td>Batman Begins        </td> <td>2005</td> <td>2000  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>37664 </td> <td>8.2   </td> <td>Judgment at Nuremberg</td> <td>1961</td> <td>1960  </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>46987 </td> <td>8     </td> <td>Relatos salvajes     </td> <td>2014</td> <td>2010  </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (240 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "Votes  | Rating | Title                 | Year | Decade\n",
+       "88355  | 8.4    | M                     | 1931 | 1930\n",
+       "132823 | 8.3    | Singin' in the Rain   | 1952 | 1950\n",
+       "74178  | 8.3    | All About Eve         | 1950 | 1950\n",
+       "635139 | 8.6    | Léon                  | 1994 | 1990\n",
+       "145514 | 8.2    | The Elephant Man      | 1980 | 1980\n",
+       "425461 | 8.3    | Full Metal Jacket     | 1987 | 1980\n",
+       "441174 | 8.1    | Gone Girl             | 2014 | 2010\n",
+       "850601 | 8.3    | Batman Begins         | 2005 | 2000\n",
+       "37664  | 8.2    | Judgment at Nuremberg | 1961 | 1960\n",
+       "46987  | 8      | Relatos salvajes      | 2014 | 2010\n",
+       "... (240 rows omitted)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -823,25 +974,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Title</th> <th>Rating</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>Gone Girl               </td> <td>8.1   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Warrior                 </td> <td>8.2   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Intouchables            </td> <td>8.5   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Shutter Island          </td> <td>8.1   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>12 Years a Slave        </td> <td>8.1   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Inside Out (2015/I)     </td> <td>8.5   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Jagten                  </td> <td>8.2   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Toy Story 3             </td> <td>8.3   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>How to Train Your Dragon</td> <td>8.1   </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>Interstellar            </td> <td>8.6   </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>\n",
+       "<p>... (10 rows omitted)</p>"
+      ],
+      "text/plain": [
+       "Title                    | Rating\n",
+       "Gone Girl                | 8.1\n",
+       "Warrior                  | 8.2\n",
+       "Intouchables             | 8.5\n",
+       "Shutter Island           | 8.1\n",
+       "12 Years a Slave         | 8.1\n",
+       "Inside Out (2015/I)      | 8.5\n",
+       "Jagten                   | 8.2\n",
+       "Toy Story 3              | 8.3\n",
+       "How to Train Your Dragon | 8.1\n",
+       "Interstellar             | 8.6\n",
+       "... (10 rows omitted)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "above_eight = ...\n",
+    "above_eight = imdb.where('Rating', are.above(8)).where('Year', are.between_or_equal_to(2010, 2015)).select('Title', 'Rating')\n",
     "above_eight"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q41</pre></strong> passed! 🚀</p>"
+      ],
+      "text/plain": [
+       "q41 results: All test cases passed!"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q41\")"
    ]
