--- a/4 - Data Types/lab03/lab03.ipynb
+++ b/4 - Data Types/lab03/lab03.ipynb
@@ -56,9 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I <3 Data Science\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"I <3\", 'Data Science')"
    ]
@@ -1423,7 +1431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.1"
   },
   "otter": {
    "OK_FORMAT": true,
