--- a/5 - More on Arrays/more_arrays.ipynb
+++ b/5 - More on Arrays/more_arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "224aef4b",
    "metadata": {
     "trusted": false
@@ -49,22 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8a76c6a6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 38.88888889,  37.77777778,  36.66666667,  39.44444444,\n",
-       "        40.        ,  38.88888889,  37.77777778])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fahrenheit_temps = make_array(70, 68, 66, 71, 72, 70, 68)\n",
     "celsius_temps = 5 / 9 * fahrenheit_temps\n",
@@ -73,21 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "323b6e27",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 38.9,  37.8,  36.7,  39.4,  40. ,  38.9,  37.8])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Bonus: Round them all to one decimal place\n",
     "celsius_temps = np.round(celsius_temps, 1)\n",
@@ -117,21 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "4ccb1bcf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 175.,   70.,   75.])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sales = make_array(50, 35, 25)\n",
     "cost = make_array(3.50, 2.00, 3.00)\n",
@@ -141,32 +107,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "20b38110",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "320.0"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Bonus: The total revenue is\n",
     "np.sum(revenue)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "75edcc42",
+   "metadata": {},
+   "source": [
+    "# Ranges"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95ea6109",
+   "id": "2dbc63c6",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# One argument gives an array from 0 to the integer provided (excluding right endpoint)\n",
+    "np.arange(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1c37638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Two arguments denotes the starting value (inclusive) and ending value (exclusive)\n",
+    "np.arange(5, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d26b0da5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Three arguments denotes the starting value, ending value, and step size\n",
+    "np.arange(5, 10, 2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78e18e8f",
+   "metadata": {},
+   "source": [
+    "# Functions on Arrays (textbook 5.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41fdb322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = np.arange(5)\n",
+    "nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb30f995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sum(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2f0e456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.diff(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75a85761",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2132dec5",
+   "metadata": {},
+   "source": [
+    "# Practice\n",
+    "\n",
+    "1. Use arange to generate the following approximation of $\\pi$:\n",
+    "\n",
+    "$$4 \\cdot \\left( \\left(1 + \\frac{1}{5} + \\frac{1}{9} + \\dots + \\frac{1}{9997} \\right) - \\left(\\frac{1}{3} + \\frac{1}{7} + \\frac{1}{11} + \\dots + \\frac{1}{9999} \\right) \\right)$$\n",
+    "\n",
+    "- Use arange to generate an array containing 1, 5, 9, ... , 9997\n",
+    "- Use / to generate an array containing 1/1, 1/5, 1/9, ..., 1/9997\n",
+    "- Sum the elements of this array to get the value of the first parenthesis\n",
+    "- Go through a similar process to get the second parenthesis\n",
+    "- Calculuate the estimate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e266612f",
+   "metadata": {},
+   "source": [
+    "2. Use arange to generate the following approximation of $\\pi$:\n",
+    "$$2 \\cdot \\left( \\frac{2}{1} \\cdot \\frac{4}{3} \\cdot \\frac{6}{5} \\cdots \\frac{1,000,000}{999999} \\right) \\cdot \\left( \\frac{2}{3} \\cdot \\frac{4}{5} \\cdot \\frac{6}{7} \\cdots \\frac{1,000,000}{1,000,001} \\right)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d4f77a8",
+   "metadata": {},
    "source": []
   }
  ],
