--- a/5 - More on Arrays/more_arrays.ipynb
+++ b/5 - More on Arrays/more_arrays.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "224aef4b",
    "metadata": {
     "trusted": false
@@ -49,22 +49,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8a76c6a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 21.11111111,  20.        ,  18.88888889,  21.66666667,\n",
+       "        22.22222222,  21.11111111,  20.        ])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fahrenheit_temps = make_array(70, 68, 66, 71, 72, 70, 68)\n",
-    "celsius_temps = 5 / 9 * fahrenheit_temps\n",
+    "celsius_temps = 5 / 9 * (fahrenheit_temps - 32)\n",
     "celsius_temps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "323b6e27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 21.1,  20. ,  18.9,  21.7,  22.2,  21.1,  20. ])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Bonus: Round them all to one decimal place\n",
     "celsius_temps = np.round(celsius_temps, 1)\n",
@@ -94,10 +117,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4ccb1bcf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 175.,   70.,   75.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sales = make_array(50, 35, 25)\n",
     "cost = make_array(3.50, 2.00, 3.00)\n",
@@ -107,10 +141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "20b38110",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "320.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Bonus: The total revenue is\n",
     "np.sum(revenue)"
@@ -126,10 +171,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2dbc63c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# One argument gives an array from 0 to the integer provided (excluding right endpoint)\n",
     "np.arange(10)"
@@ -137,10 +193,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e1c37638",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Two arguments denotes the starting value (inclusive) and ending value (exclusive)\n",
     "np.arange(5, 10)"
@@ -148,10 +215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d26b0da5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 7, 9])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Three arguments denotes the starting value, ending value, and step size\n",
     "np.arange(5, 10, 2)\n"
@@ -167,10 +245,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "41fdb322",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nums = np.arange(5)\n",
     "nums"
@@ -178,30 +267,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "eb30f995",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.sum(nums)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f2f0e456",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.diff(nums)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "75a85761",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.mean(nums)"
    ]
@@ -225,6 +347,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "43bc900d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0128498864750557"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "denoms1 = np.arange(1,9998,4)\n",
+    "fracs1 = 1 / denoms1\n",
+    "positive_sum = np.sum(fracs1)\n",
+    "positive_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "67bbd949",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.2275017230771077"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "denoms2 = np.arange(3,10000,4)\n",
+    "fracs2 = 1 / denoms2\n",
+    "negative_sum = np.sum(fracs2)\n",
+    "negative_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e3981cc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1413726315867336"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 * (positive_sum - negative_sum)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e266612f",
    "metadata": {},
@@ -234,9 +425,66 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3d4f77a8",
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "d8f9f21a",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "numerators = np.arange(2,1000001,2)\n",
+    "denoms1 = np.arange(1, 1000000,2)\n",
+    "denoms2 = np.arange(3,1000002,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "10391319",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fracs1 = numerators / denoms1\n",
+    "fracs2 = numerators / denoms2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "92eeb2da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prod1 = np.prod(fracs1)\n",
+    "prod2 = np.prod(fracs2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "53208a2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1415910827951143"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 * prod1 * prod2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf39e102",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
